# tikzloop

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: implementation.html
examples/: flowchart.tex
src/tikzloop/: __init__.py  _mlx_compat.py  cli.py  critic.py  env.py  loop.py  policy.py  reward.py  sandbox.py
tests/: conftest.py  test_env_loop.py  test_rewards.py  test_sandbox.py
train/: README.md  baseline.py  dashboard.html  dashboard.py  prepare_data.py  rewards_tikz.py  run_grpo.py
