[project]
name = "tikzloop"
version = "0.1.0"
description = "Sandbox + multi-turn environment + inference loop for text-to-TikZ experiments (TikZilla-style)"
readme = "README.md"
authors = [
    { name = "Arnab Ghosh", email = "arnabghosh93@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Apple Silicon inference for the policy LLM and the VLM critic
mlx = [
    "mlx-lm>=0.28",
    "mlx-vlm>=0.1.12",
]
# SigLIP patch-embedding reward (EMD similarity vs. ground-truth render)
reward = [
    "torch>=2.3",
    "transformers>=4.45",
]
# Local GRPO training on Apple Silicon
train = [
    "mlx-lm-lora>=2.1.0",
    "datasets>=3.0",
    "torch>=2.3",
    "transformers>=4.45",
    "python-dotenv>=1.0",
    "wandb>=0.17",
]

[project.scripts]
tikzloop = "tikzloop.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
